# ki-dinge

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json
.github/workflows/: update-readme.yml
agentsmith/: agentsmith.types.ts
agentsmith/prompts/ci-fix/: prompt.json
book-search/: README.md  book-search.ts  package.json  pnpm-lock.yaml  tsconfig.json
ci-fix/: .env.example  Dockerfile  PRD.md  README.md  agent.test.ts  agent.ts  index.ts  package.json  pnpm-lock.yaml  progress.txt  sandbox.test.ts  sandbox.ts  system-prompt.ts  tsconfig.json
ci-fix/docs/: circleci-mcp-research.md
ci-fix/fixtures/lint-error/: job-logs.json  (+2 more)
ci-fix/tools/: ci-tools.test.ts  ci-tools.ts  github-tools.test.ts  github-tools.ts  sandbox-tools.test.ts  sandbox-tools.ts
claude-ci/: README.md  prompt.md
data-analyst/: .env.example  .gitignore  README.md  index.ts  package.json  pnpm-lock.yaml  seed.ts  stream.test.ts  stream.ts  tools.test.ts  tools.ts  tsconfig.json  types.ts
docs/superpowers/: prd.md
get-hostname-agent-loop/: README.md  pnpm-lock.yaml
get-hostname-loop/: get-hostname.ts  package.json
get-hostname-sh/: README.md  get-hostname.sh
git-assistant/: README.md  agent.test.ts  git_assistant.ts  package.json  pnpm-lock.yaml  tools.test.ts  tools.ts
llamaindex-rag-agent/: README.md  pyproject.toml
llamaindex-rag-agent/src/: starter.py
prompt-script/: README.md  main.sh
src/: __init__.py  agent.py  config.py  gmail_service.py  main.py  starter.py
tests/: test_gmail_service.py  test_integration.py
tool-calling/: README.md  agent.test.ts  agent.ts  git_assistant.ts  index.ts  package.json  pnpm-lock.yaml  tool-calling.sh  tools.ts  tsconfig.json
top3-query/: README.md  top3.sh
virtual-fs/: .env.example  README.md  agent.ts  backend.ts  logger.ts  package.json  pnpm-lock.yaml  tools.test.ts  tools.ts  tsconfig.json  vfs.test.ts  vfs.ts
virtual-fs/backends/: blob.ts  gdrive.test.ts  gdrive.ts  local.test.ts  local.ts
virtual-fs/data/: README.md
(+24 files in other folders)
