[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-agent"
version = "0.1.0"
description = "AI agent for reading and managing Gmail"
authors = [{name = "User", email = "user@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-mistralai",
    "llama-index-llms-anthropic"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
gmail-agent = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
